handling tune files
