# api/openapi-spec/openapi.yaml
@@ -285,6 +285,11 @@ components:
             tunes:
               $ref: '#/components/schemas/TuneIdList'
 
+    BasicMusicSet:
+      allOf:
+        - $ref: '#/components/schemas/ObjectId'
+        - $ref: '#/components/schemas/BasicSetProperties'
+
     MusicSet:
       description: Called MusicSet and not only Set because of name clash in e.g. typescript
       allOf:
@@ -336,6 +341,8 @@ components:
         - $ref: '#/components/schemas/Tune'
         - type: object
           properties:
+            set:
+              $ref: '#/components/schemas/BasicMusicSet'
             warnings:
               type: array
               items:
