# internal/api/apimodel/model_basic_music_set.go
@@ -1,0 +1,25 @@
+/*
+ * Set and Tune API
+ *
+ * API for managing sets and tunes
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimodel
+
+type BasicMusicSet struct {
+
+	// Unique identifier for an object
+	ID uint64 `json:"id"`
+
+	// The name of the Set
+	Title string `json:"title"`
+
+	// A description of the Set
+	Description string `json:"description,omitempty"`
+
+	// The name of the creator of the set
+	Creator string `json:"creator,omitempty"`
+}
